@@ -1,0 +1,8 @@
+LIBRARY "sample.dll"
+DESCRIPTION 'Sample TinyMUX module'
+
+EXPORTS
+    mux_CanUnloadNow    @1 PRIVATE
+    mux_GetClassObject  @2 PRIVATE
+    mux_Register        @3 PRIVATE
+    mux_Unregister      @4 PRIVATE
